--- a/app/views/hub/verify-paused-email.html
+++ b/app/views/hub/verify-paused-email.html
@@ -15,9 +15,8 @@
       <h1 class="heading-large">
         Continue verifying with {{idpName}}
       </h1>
+      <p>Choose service you were using to finish verifying your identity.</p>
       {% include "includes/idp-and-verify-logos.html" %}
-
-      <p>In order to continue your verification, pick the service you need to access below and you can continue.</p>
 
       <ul class="list ">
         <h2 class="heading-small">Benefits</h2>
