--- a/app/views/idp/choose-proof-of-address.html
+++ b/app/views/idp/choose-proof-of-address.html
@@ -29,19 +29,27 @@
       <div class="column-half">
         <div class="evidence-container">
           <div class="img-container">
-            <img src="/public/images/evidence-icons/bank.png" alt="">
-          </div>
-          <a class="button" href="/idp/bank-account{{formQuery}}">UK bank account</a>
-        </div>
-      </div>
-      <div class="column-half">
-        <div class="evidence-container">
-          <div class="img-container">
             <img src="/public/images/evidence-icons/card.png" alt="">
           </div>
           <a class="button" href="/idp/credit-card{{formQuery}}">Debit or credit card</a>
         </div>
       </div>
+
+      <div class="column-half">
+        <div class="evidence-container">
+          <div class="img-container">
+            <img src="/public/images/evidence-icons/bank.png" alt="">
+          </div>
+          <a class="button" href="/idp/bank-account{{formQuery}}">UK bank account</a>
+        </div>
+      </div>
+      
+      <div class="column-half">
+        <div class="evidence-container" style="height: 177px">
+          <p  style="padding: 10% 0;">I don't have any of these documents with me right now.<br><br><a class="" href="/idp/pause-warning{{formQuery}}">Save and continue later</a></p>
+        </div>
+      </div>
+      
 
 		</div>
 	</div>
