--- a/app/views/idp/driving-licence.html
+++ b/app/views/idp/driving-licence.html
@@ -75,13 +75,10 @@
 					  <summary><span class="summary">I don't have my driving licence details with me</span></summary>
 
 					  <div class="panel panel-border-narrow">
-							<p>If you don't have your driving licence details with you, you can:</p>
-							<ul class="list list-bullet">
-								<li><a href="#">save and return when you have your driving licence</a> </li>
-								<li><a href="#">cancel and access the government service another way</a></li>
-							</ul>
+							<p>If you don't have your driving licence details with you, you can <a href="/idp/pause-warning{{formQuery}}">save and return when you have your driving licence</a>.
 						</div>
 					</details>
+
 
 				</form>
 				
