--- a/app/views/idp/passport.html
+++ b/app/views/idp/passport.html
@@ -95,19 +95,13 @@
 						</button>
 					</div>
 
-
 					<details>
 					  <summary><span class="summary">I don't have my passport details with me</span></summary>
 
 					  <div class="panel panel-border-narrow">
-							<p>If you don't have your passport details with you, you can:</p>
-							<ul class="list list-bullet">
-								<li><a href="#">save and return when you have your passport</a> </li>
-								<li><a href="#">cancel and access the government service another way</a></li>
-							</ul>
+							<p>If you don't have your passport details with you, you can <a href="/idp/pause-warning{{formQuery}}">save and return when you have your passport</a>.
 						</div>
 					</details>
-
 				</form>
 				
 			</div>
