--- a/app/views/idp/security-code.html
+++ b/app/views/idp/security-code.html
@@ -38,7 +38,7 @@
 					</details>
 				</p>
 
-				<form id="main-form" action="/idp/security-code{{formQuery}}" method="post" name="Form" >
+				<form id="main-form" action="/idp/sign-in-code-send{{formQuery}}" method="post" name="Form" >
 					
 					{{ formData|safe }}
 
