--- a/app/views/idp/sign-in.html
+++ b/app/views/idp/sign-in.html
@@ -18,7 +18,7 @@
 			<div class="form-group">
 				
 
-				<form id="main-form" action="/idp/security-code-enter{{formQuery}}" method="get">
+				<form id="main-form" action="/idp/sign-in-code-send{{formQuery}}" method="post">
 					
 					{{ formData|safe }}
 
