--- a/app/views/idp/non-uk-passport.html
+++ b/app/views/idp/non-uk-passport.html
@@ -96,16 +96,13 @@
 					</div>
 
 					<details>
-					  <summary><span class="summary">I don't have my passport details with me</span></summary>
+					  <summary><span class="summary">I don't have my non-UK ID details with me</span></summary>
 
 					  <div class="panel panel-border-narrow">
-							<p>If you don't have your passport details with you, you can:</p>
-							<ul class="list list-bullet">
-								<li><a href="#">save and return when you have your passport</a> </li>
-								<li><a href="#">cancel and access the government service another way</a></li>
-							</ul>
+							<p>If you don't have your non-UK ID details with you, you can <a href="/idp/pause-warning{{formQuery}}">save and return when you have your non-UK ID</a>.
 						</div>
 					</details>
+
 
 				</form>
 				
