Updated links and style on start

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -37,6 +37,9 @@ $path: "/public/images/";
 
 // Add extra styles here, or re-organise the Sass files in whichever way makes most sense to you
 
+.start-button-list li {
+  margin-bottom: 0.5em;
+}
 
 // verify logo in hub
 
