--- a/app/views/hub/redirect-to-idp.html
+++ b/app/views/hub/redirect-to-idp.html
@@ -21,18 +21,18 @@
         <p>You’ll need your:</p>
         <ul class="list list-bullet">
           {% if data['passport'] == 'true' %}
-            <li>a passport</li>
+            <li>passport</li>
           {% endif %}
           {% if data['drivingLicence'] == 'true' %}
-            <li>a driving licence</li>
+            <li>driving licence</li>
           {% endif %}
           {% if data['non_uk_id'] == 'true' %}
-            <li>a non-UK identity document</li>
+            <li>non-UK identity document</li>
           {% endif %}
           {% if data['apps'] == 'true' %}
-            <li>a smartphone or tablet</li>
+            <li>smartphone or tablet</li>
           {% elif  data['mobile'] == 'true' %}
-            <li>a mobile phone</li>
+            <li>mobile phone</li>
           {% endif %}
         </ul>
 
