--- a/app/views/idp/bank-account.html
+++ b/app/views/idp/bank-account.html
@@ -41,8 +41,13 @@
 						</button>
 					</div>
 
-					<p><a href="#">I don't have my bank account details with me</a></p>
+					<details>
+					  <summary><span class="summary">I don't have my bank account details with me</span></summary>
 
+					  <div class="panel panel-border-narrow">
+							<p>If you don't have your bank account details with you, you can <a href="/idp/pause-warning{{formQuery}}">save and return when you have them</a>.
+						</div>
+					</details>
 
 				</form>
 				
