Added cancel flow

--- a/app/views/includes/idp-sidebar.html
+++ b/app/views/includes/idp-sidebar.html
@@ -13,4 +13,5 @@
 		</br>
 		Saturday and Sunday 8am–5pm
 	</p>
+	<p style="font-size:19px; margin-top: 0.5em;"><a href="/idp/cancel-warning">Cancel registration</a></p>
 </div>
