Added eidas warning

--- a/app/views/hub/service-signin.html
+++ b/app/views/hub/service-signin.html
@@ -46,7 +46,7 @@
         <h2 class="heading-small">Use a digital identity from another European country</h2>
         <p>If you are part of an ID scheme in France, the Netherlands, Norway or another participating country you may be able to use it here.</p>
         
-        <p><a href="#">Select your European scheme</a></p>
+        <p><a href="#">Select your European identity scheme</a></p>
 
     </div>
   </div>
