Removed references to usernames

--- a/app/views/idp/pause-warning.html
+++ b/app/views/idp/pause-warning.html
@@ -18,7 +18,7 @@
       
       <p>The details you have already entered will be saved and you can continue your registration at a later time.</p>
 
-      <p>You'll need to remember your username and password when you sign back in to continue.</p>      
+      <p>You'll need to remember your email address and password when you sign back in to continue.</p>      
       
 			{{ formData | safe }}
 
