--- a/app/views/hub/verify-paused.html
+++ b/app/views/hub/verify-paused.html
@@ -19,7 +19,7 @@
 
       <p>When you’re ready you can come back to <a href="{{serviceStartURL}}">{{serviceNameLower}}</a> and finish verifying your identity.</p>
 
-      <p>You’ll need the email or username and password you used to create an account with {{idpName}}.</p>
+      <p>You’ll need the email and password you used to create an account with {{idpName}}.</p>
 
       <p><a class="button" href='/hub/idp-reminder{{formQuery}}'>Continue verifying with {{idpName}}</a></p>
 
