--- a/app/views/hub/verify-success.html
+++ b/app/views/hub/verify-success.html
@@ -10,7 +10,7 @@
   <h1>{{idpName}} has verified your identity</h1>
 
 
-  <p>You can sing in wherever you see the GOV.UK Verify logo with your {{idpName}} identity account username and password.</p>
+  <p>You can sign in wherever you see the GOV.UK Verify logo with your {{idpName}} identity account username and password.</p>
 
 	<p>You can now you can continue to {{serviceNameLower}}.</p>
 
