--- a/app/views/idp/security-code-enter.html
+++ b/app/views/idp/security-code-enter.html
@@ -16,16 +16,13 @@
 		<div class="column-two-thirds">
 			<h1 class="heading-large ">Security code</h1>
 			<div class="form-group">
-
-				<p>We've sent your security code to:</p>
-
-				<p>
+	
 					{% if data['mobileNumber'] > 1 %}
-						{{data['mobileNumber']}}
+						<p>We've sent your security code to:</p>
+						<p>{{data['mobileNumber']}}</p>
 					{% else %}
-						077123456789
+						<p>We've sent your security code to your mobile phone.</p>
 					{% endif %}
-				</p>
 				
 				<p>It may take a minute or so to arrive.</p>
 
