Moved save and continue button

--- a/app/views/idp/choose-proof-of-address.html
+++ b/app/views/idp/choose-proof-of-address.html
@@ -44,12 +44,19 @@
         </div>
       </div>
       
-      <div class="column-half">
+<!--       <div class="column-half">
         <div class="evidence-container" style="height: 177px">
           <p  style="padding: 10% 0;">I don't have any of these documents with me right now.<br><br><a class="" href="/idp/pause-warning{{formQuery}}">Save and continue later</a></p>
         </div>
-      </div>
+      </div> -->
       
+      <details>
+        <summary><span class="summary">I don't have any of these documents with me</span></summary>
+
+        <div class="panel panel-border-narrow">
+          <p>If you don't have any of these documents with you, you can <a href="/idp/pause-warning{{formQuery}}">save and continue when you have them</a>.
+        </div>
+      </details>
 
 		</div>
 	</div>
