Updated start page content

--- a/app/views/service/renew-driving-licence-start.html
+++ b/app/views/service/renew-driving-licence-start.html
@@ -13,8 +13,9 @@
       <h1 class="heading-xlarge">{{serviceName}}</h1>
 
       <article>
-        <p>You can apply for, renew, replace or update your passport and pay for it online.</p>
-        <p>You can’t use this service if you’re travelling within the next 4 weeks.</p>
+        <p>Renew your driving licence online with <abbr title="Driver and Vehicle Licensing Agency">DVLA</abbr> if you have a valid UK passport.</p>
+        <p>There’s a different way to <a href="https://www.gov.uk/renew-driving-licence-at-70">renew your licence if you’re 70 or over</a> and <a href="https://www.gov.uk/renew-lorry-bus-coach-licence">renew a 5-year bus or lorry licence</a>.</p>
+        <p>This page is also available <a href="https://www.gov.uk/adnewyddu-trwydded-yrru">in Welsh (Cymraeg)</a>.</p>
 
         <div class="sign-in-wrap">
           <div class="button-wrap">
@@ -26,14 +27,16 @@
 
         <h3 class="heading-medium">Before you start</h3>
         
-        <div class="notice">
-          <i class="icon icon-important">
-            <span class="visually-hidden">Warning</span>
-          </i>
-          <strong class="bold-small">
-            You cannot apply online if your name or title has changed.
-          </strong>
-        </div>
+        <p>
+          <div class="notice">
+            <i class="icon icon-important">
+              <span class="visually-hidden">Warning</span>
+            </i>
+            <strong class="bold-small">
+              You cannot apply online if your name or title has changed.
+            </strong>
+          </div>
+        </p>
 
         <p>You must renew a photocard licence every 10 years - you’ll receive a reminder before your current licence ends.</p>
 
