--- a/app/views/hub/verify-paused-email.html
+++ b/app/views/hub/verify-paused-email.html
@@ -15,7 +15,7 @@
       <h1 class="heading-large">
         Continue verifying with {{idpName}}
       </h1>
-      <p>Choose service you were using to finish verifying your identity.</p>
+      <p>Choose the service you were using to finish verifying your identity.</p>
       {% include "includes/idp-and-verify-logos.html" %}
 
       <ul class="list ">
