--- a/app/views/hub/verify-paused.html
+++ b/app/views/hub/verify-paused.html
@@ -13,11 +13,16 @@
 
     <div class="column-two-thirds">
       <h1 class="heading-large">
-        {{idpName}} has saved your information
+        Your {{idpName}} identity account has been saved
       </h1>
 
-
-      <p>When you’re ready you can come back to <a href="{{serviceStartURL}}">{{serviceNameLower}}</a> and finish verifying your identity.</p>
+      <p>To return later you can:</p>
+      
+      <ul class="list list-bullet">
+        <li>go back to <a href="{{serviceStartURL">{{serviceNameLower}}</a> and sign back in.</li>
+        <li>use the link in your email from {{idpName}}</li>
+        <li>bookmark this page</li>
+      </ul>
 
       <p>You’ll need the email and password you used to create an account with {{idpName}}.</p>
 
