Fixing signin flow

--- a/app/views/idp/sign-up.html
+++ b/app/views/idp/sign-up.html
@@ -45,6 +45,7 @@
 		      </p>
 
 					<div class='form-group'>
+						<input type="hidden" name="signUp" value="true">
 						<button class="button">
 							Continue
 						</button>
