--- a/app/views/hub/verify-paused.html
+++ b/app/views/hub/verify-paused.html
@@ -19,7 +19,7 @@
       <p>To return later you can:</p>
       
       <ul class="list list-bullet">
-        <li>go back to <a href="{{serviceStartURL">{{serviceNameLower}}</a> and sign back in.</li>
+        <li>go back to <a href="{{serviceStartURL}}">{{serviceNameLower}}</a> and sign in with GOV.UK Verify.</li>
         <li>use the link in your email from {{idpName}}</li>
         <li>bookmark this page</li>
       </ul>
