--- a/app/views/includes/idp-sidebar.html
+++ b/app/views/includes/idp-sidebar.html
@@ -1,4 +1,4 @@
-<div class="column-third certified-logo">
+<div class="column-one-third certified-logo">
 	<img src="/public/images/gov_uk_verify_certified_company.png" alt="">
 
 	<h1 class="heading-large">Live web chat</h1>
