--- a/app/views/idp/date-of-birth.html
+++ b/app/views/idp/date-of-birth.html
@@ -12,7 +12,6 @@
 
 <main id="content" role="main">
 	<div class="grid-row">
-		{% include "includes/idp-sidebar.html" %}
 		<div class="column-two-thirds">
 			<h1 class="heading-large ">What's your date of birth?</h1>
 			<div class="form-group">
@@ -45,7 +44,7 @@
 							Continue
 						</button>
 						
-						<div  class="secondry-button">
+						<div  class="secondary-button">
 							<a href="javascript:history.back()">Back</a>
 						</div>
 					</div>
@@ -54,6 +53,7 @@
 				
 			</div>
 		</div>
+		{% include "includes/idp-sidebar.html" %}
 	</div>
 </main>
 
