--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -45,11 +45,13 @@ $path: "/public/images/";
 
   .verify-logo {
     @include grid-column(1 / 3, tablet, right);
-    display: inline-block;
     float:left;
     margin-top:2em;
     img{
-    width:300px
+      width:300px
+    }
+    @include media(mobile){
+      display: none;
     }
   }
 
