--- a/app/views/index.html
+++ b/app/views/index.html
@@ -10,7 +10,7 @@
   <div class="grid-row">
     {{ formData | safe }}
     <form method="POST" action="hub/slide-start{{formQuery}}">
- 
+
       <div class="column-half">
         <h1 class="heading-large">
           The fancy new GOV.UK Verify prototype
@@ -26,9 +26,9 @@
             <li><input type="submit" formaction="/service/basic-dbs-check-start?requestId=basic-dbs-check" value="Basic DBS check" class="button" id="next-button"></li>
 
             <li><input type="submit" formaction="/service/check-state-pension-start?requestId=check-state-pension" value="Check your state pension" class="button" id="next-button"></li>
-            
+
             <li><input type="submit" formaction="/service/personal-tax-account-start?requestId=personal-tax-account" value="Personal tax account" class="button" id="next-button"></li>
-            
+
             <li><input type="submit" formaction="/service/renew-apply-passport-start?requestId=passport" value="Renew or apply for a passport" class="button" id="next-button"></li>
 
             <li><input type="submit" formaction="/service/renew-driving-licence-start?requestId=renew-driving-licence" value="Renew your driving licence" class="button" id="next-button"></li>
@@ -121,13 +121,61 @@
               </fieldset>
             </div>
           </div>
+          <div id="connected-idp">
+              <h3 class="heading-small">Connected IDPs</h3>
+              <div class="form-group">
+                <fieldset>
+                  <div class="multiple-choice">
+                    <input id="connected-barclays" type="checkbox" name="connectedIDP" value="barclays" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-barclays">
+                      Barclays
+                    </label>
+                  </div>
+                  <div class="multiple-choice">
+                    <input id="connected-citizensafe" type="checkbox" name="connectedIDP" value="citizensafe" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-citizensafe">
+                      Citizensafe
+                    </label>
+                  </div>
+                  <div class="multiple-choice">
+                    <input id="connected-digidentity" type="checkbox" name="connectedIDP" value="digidentity" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-digidentity">
+                      Digidentity
+                    </label>
+                  </div>
+                  <div class="multiple-choice">
+                    <input id="connected-experian" type="checkbox" name="connectedIDP" value="experian" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-experian">
+                      Experian
+                    </label>
+                  </div>
+                  <div class="multiple-choice">
+                    <input id="connected-post-office" type="checkbox" name="connectedIDP" value="post-office" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-post-office">
+                      Post Office
+                    </label>
+                  </div>
+                  <div class="multiple-choice">
+                    <input id="connected-royal-mail" type="checkbox" name="connectedIDP" value="royal-mail" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-royal-mail">
+                      Royal Mail
+                    </label>
+                  </div>
+                  <div class="multiple-choice">
+                    <input id="connected-secureidentity" type="checkbox" name="connectedIDP" value="secureidentity" checked="checked">
+                    <label class="block-label selection-button-checkbox" for="connected-secureidentity">
+                      SecureIdentity
+                    </label>
+                  </div>
+
+                </fieldset>
+              </div>
+            </div>
         </div>
-      
+
       </form>
     </div>
   </div>
 </main>
 
 {% endblock %}
-
-
