Skipped signin picker

--- a/app/views/service/view-driving-licence-start.html
+++ b/app/views/service/view-driving-licence-start.html
@@ -32,7 +32,7 @@
         </div>
 
         <div class="button-wrap">
-          <a class="button button-start" href="/hub/service-signin{{formQuery}}">
+          <a class="button button-start" href="/hub/verify-signin-picker{{formQuery}}">
             <strong>Start now</strong>
           </a>
         </div>
