--- a/app/views/service/renew-driving-licence-start.html
+++ b/app/views/service/renew-driving-licence-start.html
@@ -19,7 +19,7 @@
 
         <div class="sign-in-wrap">
           <div class="button-wrap">
-            <a class="button button-start" href="/hub/service-signin{{formQuery}}">
+            <a class="button button-start" href="/hub/verify-signin-picker{{formQuery}}">
               <strong>Start now</strong>
             </a>
           </div>
