--- a/app/views/hub/about-certified-companies.html
+++ b/app/views/hub/about-certified-companies.html
@@ -18,17 +18,13 @@
       <img alt="Experian: a world of insight" src="/public/images/idp-logos/white/experian.png">
     </li>
     <li>
-      <img alt="Post Office" src="/public/images/idp-logos/white/post-office.png">
-    </li>
-    <li>
       <img alt="Digidentity" src="/public/images/idp-logos/white/digidentity.png">
     </li>
     <li>
-      <img alt="Royal Mail" src="/public/images/idp-logos/white/royal-mail.png">
+      <img alt="Post Office" src="/public/images/idp-logos/white/post-office.png">
     </li>
-    <li>
-      <img alt="CitizenSafe" src="/public/images/idp-logos/white/citizensafe.png">
-    </li>
+  </ul>
+  <ul class="list-companies"> 
     <li>
       <img alt="Barclays" src="/public/images/idp-logos/white/barclays.png">
     </li>
